--- a/Hockey-Env.ipynb
+++ b/Hockey-Env.ipynb
@@ -1049,6 +1049,118 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Human vs. SAC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Human Controls:\n",
+      " left:\t\t\tleft arrow key left\n",
+      " right:\t\t\tarrow key right\n",
+      " up:\t\t\tarrow key up\n",
+      " down:\t\t\tarrow key down\n",
+      " tilt clockwise:\tw\n",
+      " tilt anti-clockwise:\ts\n",
+      " shoot :\tspace\n",
+      "cpu\n",
+      "Loading models from checkpoints/SAC_Hockey_3000-gamma0.99-tau0.005-lr0.0003-alpha0.2-autotuneTrue-pera0.1-perb0.1-seed300.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Finn der Zocker\\Documents\\Programmieren\\RL\\Week 9\\Gym-SAC\\sac.py:152: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  checkpoint = torch.load(ckpt_path)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sac import SAC\n",
+    "import argparse\n",
+    "\n",
+    "args = argparse.Namespace(\n",
+    "    env_name=\"Hockey\",\n",
+    "    policy=\"Gaussian\",\n",
+    "    gamma=0.99,\n",
+    "    tau=0.005,\n",
+    "    lr=0.0003,\n",
+    "    alpha=0.2,\n",
+    "    automatic_entropy_tuning=False,\n",
+    "    seed=123456,\n",
+    "    batch_size=128,\n",
+    "    max_episodes=10000,\n",
+    "    self_play=True,\n",
+    "    max_timesteps=2000,\n",
+    "    hidden_size=256,\n",
+    "    updates_per_step=1,\n",
+    "    start_steps=10000,\n",
+    "    target_update_interval=1,\n",
+    "    replay_size=1000000,\n",
+    "    replay_alpha=0.1,\n",
+    "    replay_beta=0.1,\n",
+    "    cuda=False\n",
+    ")\n",
+    "\n",
+    "env = h_env.HockeyEnv()\n",
+    "player1 = h_env.HumanOpponent(env=env, player=1)\n",
+    "player2 = SAC(env.observation_space.shape[0], env.action_space, args)\n",
+    "\n",
+    "# IMPORTANT: CHOOSE PARAMETER FILE\n",
+    "player2.load_checkpoint(\n",
+    "    f\"checkpoints/SAC_Hockey_3000-gamma0.99-tau0.005-lr0.0003-alpha0.2-autotuneTrue-pera0.1-perb0.1-seed300.pth\", evaluate=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done after 593 steps.\n"
+     ]
+    }
+   ],
+   "source": [
+    "obs, info = env.reset()\n",
+    "\n",
+    "env.render()\n",
+    "time.sleep(1)\n",
+    "obs_agent2 = env.obs_agent_two()\n",
+    "for i in range(1, 100001):\n",
+    "    time.sleep(0.1)\n",
+    "    env.render()\n",
+    "    a1 = player1.act(obs) \n",
+    "    a2 = player2.select_action(obs_agent2, evaluate=False)\n",
+    "    obs, r, d, _, info = env.step(np.hstack([a1,a2]))\n",
+    "    obs_agent2 = env.obs_agent_two()\n",
+    "    if d: break\n",
+    "print(f\"Done after {i} steps.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.close()"
+   ]
   }
  ],
  "metadata": {
