Introduce puck touch reward

--- a/Hockey-Env.ipynb
+++ b/Hockey-Env.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-08-06T09:50:57.173010Z",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-08-06T09:50:57.395437Z",
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-21T21:46:11.226543Z",
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-21T21:40:55.480803Z",
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-21T21:47:04.759309Z",
@@ -803,31 +803,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done after 1319 steps.\n"
+      "3.000001567094231\n",
+      "0.5203471611818006\n",
+      "0.22823264943339824\n",
+      "0.10843981407000773\n",
+      "0.04759343621225327\n",
+      "0.024897346603348993\n",
+      "10.00000358645668\n",
+      "Done after 487 steps. Episode reward: 13.898792322502526\n"
      ]
     }
    ],
    "source": [
-    "obs, info = env.reset()\n",
+    "obs, info = env.reset(one_starting = True)\n",
     "\n",
     "env.render()\n",
     "time.sleep(1)\n",
     "obs_agent2 = env.obs_agent_two()\n",
+    "ep_rew = 0\n",
     "#for _ in range(1000000):\n",
-    "for i in range(1, 100001):\n",
+    "for i in range(1, 1001):\n",
     "    time.sleep(0.1)\n",
     "    env.render()\n",
     "    a1 = player1.act(obs) \n",
     "    a2 = player2.act(obs_agent2)\n",
     "    obs, r, d, _, info = env.step(np.hstack([a1,a2]))\n",
+    "    if r > 0.01:\n",
+    "        print(r)\n",
+    "    ep_rew += r\n",
     "    obs_agent2 = env.obs_agent_two()\n",
     "    if d: break\n",
-    "print(f\"Done after {i} steps.\")"
+    "print(f\"Done after {i} steps. Episode reward: {ep_rew}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-21T21:47:08.152651Z",
@@ -1087,7 +1098,7 @@
     "    batch_size=128,\n",
     "    max_episodes=10000,\n",
     "    self_play=True,\n",
-    "    max_timesteps=2000,\n",
+    "    max_timesteps=1000,\n",
     "    hidden_size=256,\n",
     "    updates_per_step=1,\n",
     "    start_steps=10000,\n",
