--- a/Hockey-Env.ipynb
+++ b/Hockey-Env.ipynb
@@ -1070,15 +1070,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Human Controls:\n",
+      " left:\t\t\tleft arrow key left\n",
+      " right:\t\t\tarrow key right\n",
+      " up:\t\t\tarrow key up\n",
+      " down:\t\t\tarrow key down\n",
+      " tilt clockwise:\tw\n",
+      " tilt anti-clockwise:\ts\n",
+      " shoot :\tspace\n",
       "cpu\n",
-      "Loading models from checkpoints/SAC_Hockey_6000-gamma0.99-tau0.005-lr0.0003-alpha0.2-autotuneTrue-pera0.1-perb0.1-seed111.pth\n"
+      "Loading models from checkpoints/SAC_Hockey_15000-gamma0.99-tau0.005-lr0.0003-alpha0.0-autotuneFalse-pera0.1-perb0.1-seed280.pth\n"
      ]
     }
    ],
@@ -1110,27 +1118,34 @@
     ")\n",
     "\n",
     "env = h_env.HockeyEnv()\n",
-    "player2 = h_env.BasicOpponent(weak=True)#h_env.HumanOpponent(env=env, player=2)\n",
-    "player1 = SAC(env.observation_space.shape[0], env.action_space, args)\n",
-    "#player2 = SAC(env.observation_space.shape[0], env.action_space, args)\n",
+    "player1 = h_env.HumanOpponent(env=env, player=1)\n",
+    "player2 = SAC(env.observation_space.shape[0], env.action_space, args)\n",
     "\n",
     "# IMPORTANT: CHOOSE PARAMETER FILE\n",
-    "#player1.load_checkpoint(\n",
-    "    #f\"checkpoints/SAC_Hockey_4000-gamma0.99-tau0.005-lr0.0003-alpha0.0-autotuneFalse-pera0.1-perb0.1-seed51.pth\", evaluate=True)\n",
-    "player1.load_checkpoint(\n",
-    "    f\"checkpoints/SAC_Hockey_6000-gamma0.99-tau0.005-lr0.0003-alpha0.2-autotuneTrue-pera0.1-perb0.1-seed111.pth\", evaluate=True)"
+    "\n",
+    "# EVALUATION WINNER (alpha-0.0_15000)\n",
+    "player2.load_checkpoint(\n",
+    "    f\"checkpoints/SAC_Hockey_15000-gamma0.99-tau0.005-lr0.0003-alpha0.0-autotuneFalse-pera0.1-perb0.1-seed280.pth\", evaluate=True)\n",
+    "\n",
+    "# EVALUATION SECOND PLACE (no-PER_15000)\n",
+    "# player2.load_checkpoint(\n",
+    "    # f\"checkpoints/SAC_Hockey_15000-gamma0.99-tau0.005-lr0.0003-alpha0.2-autotuneTrue-pera0.0-perb0.1-seed561.pth\", evaluate=True)\n",
+    "\n",
+    "# EVALUATION THIRD PLACE (alpha-auto_4000) -> passive until you move towards the puck due to overfitting to basic opponent :)\n",
+    "# player2.load_checkpoint(\n",
+    "    # f\"checkpoints/SAC_Hockey_4000-gamma0.99-tau0.005-lr0.0003-alpha0.2-autotuneTrue-pera0.1-perb0.1-seed51.pth\", evaluate=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done after 50 steps. Winner: 1\n"
+      "Done after 158 steps. Winner: -1\n"
      ]
     }
    ],
@@ -1141,11 +1156,10 @@
     "time.sleep(1)\n",
     "obs_agent2 = env.obs_agent_two()\n",
     "for i in range(1, 2001):\n",
-    "    time.sleep(0.1)\n",
+    "    time.sleep(0.08)\n",
     "    env.render()\n",
-    "    a2 = player2.act(obs_agent2) \n",
-    "    a1 = player1.select_action(obs, evaluate=True)\n",
-    "    #a2 = player2.select_action(obs_agent2, evaluate=False)\n",
+    "    a1 = player1.act(obs) \n",
+    "    a2 = player2.select_action(obs_agent2, evaluate=True)\n",
     "    obs, r, d, _, info = env.step(np.hstack([a1,a2]))\n",
     "    obs_agent2 = env.obs_agent_two()\n",
     "    if d: break\n",
@@ -1154,180 +1168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
     "env.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Evaluation of final agents"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cpu\n",
-      "Loading models from checkpoints/SAC_Hockey_4000-gamma0.99-tau0.005-lr0.0003-alpha0.0-autotuneFalse-pera0.1-perb0.1-seed51.pth\n",
-      "cpu\n",
-      "Loading models from checkpoints/SAC_Hockey_4000-gamma0.99-tau0.005-lr0.0003-alpha0.2-autotuneTrue-pera0.1-perb0.1-seed111.pth\n",
-      "alpha_0 vs. weak basic opponent\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Finn der Zocker\\Documents\\Programmieren\\RL\\Week 9\\Gym-SAC\\sac.py:152: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  checkpoint = torch.load(ckpt_path)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "alpha_0 vs. strong basic opponent\n",
-      "alpha_0 vs. alpha_tune\n",
-      "alpha_tune vs. weak basic opponent\n",
-      "alpha_tune vs. strong basic opponent\n",
-      "{'alpha_0': [45, 1, 4], 'alpha_tune': [26, 0, 24]}\n",
-      "{'alpha_0': [49, 0, 1], 'alpha_tune': [49, 0, 1]}\n",
-      "{'alpha_0': 50, 'alpha_tune': 50}\n"
-     ]
-    }
-   ],
-   "source": [
-    "NUM_EPS_BASIC_WEAK = 50\n",
-    "NUM_EPS_BASIC_STRONG = 50\n",
-    "NUM_EPS_VS_OTHER_AGENT = 50\n",
-    "\n",
-    "from sac import SAC\n",
-    "import argparse\n",
-    "import os\n",
-    "\n",
-    "if not os.path.exists('stats/'):\n",
-    "    os.makedirs('stats/')\n",
-    "\n",
-    "args = argparse.Namespace(\n",
-    "    env_name=\"Hockey\",\n",
-    "    policy=\"Gaussian\",\n",
-    "    gamma=0.99,\n",
-    "    tau=0.005,\n",
-    "    lr=0.0003,\n",
-    "    alpha=0.2,\n",
-    "    automatic_entropy_tuning=False,\n",
-    "    seed=123456,\n",
-    "    batch_size=128,\n",
-    "    max_episodes=10000,\n",
-    "    self_play=True,\n",
-    "    max_timesteps=2000,\n",
-    "    hidden_size=256,\n",
-    "    updates_per_step=1,\n",
-    "    start_steps=10000,\n",
-    "    target_update_interval=1,\n",
-    "    replay_size=1000000,\n",
-    "    replay_alpha=0.1,\n",
-    "    replay_beta=0.1,\n",
-    "    cuda=False\n",
-    ")\n",
-    "\n",
-    "env = h_env.HockeyEnv()\n",
-    "\n",
-    "basic_weak = h_env.BasicOpponent(weak=True)\n",
-    "basic_strong = h_env.BasicOpponent(weak=False)\n",
-    "\n",
-    "alpha_0 = SAC(env.observation_space.shape[0], env.action_space, args)\n",
-    "alpha_0.load_checkpoint(\n",
-    "    f\"checkpoints/SAC_Hockey_4000-gamma0.99-tau0.005-lr0.0003-alpha0.0-autotuneFalse-pera0.1-perb0.1-seed51.pth\", evaluate=True)\n",
-    "alpha_tune = SAC(env.observation_space.shape[0], env.action_space, args)\n",
-    "alpha_tune.load_checkpoint(\n",
-    "    f\"checkpoints/SAC_Hockey_4000-gamma0.99-tau0.005-lr0.0003-alpha0.2-autotuneTrue-pera0.1-perb0.1-seed111.pth\", evaluate=True)\n",
-    "\n",
-    "trained_agents = {\n",
-    "    \"alpha_0\": alpha_0,\n",
-    "    \"alpha_tune\": alpha_tune\n",
-    "}\n",
-    "\n",
-    "against_basic_weak = {k: [0, 0, 0] for k in trained_agents}\n",
-    "against_basic_strong = {k: [0, 0, 0] for k in trained_agents}\n",
-    "competition_points = {k: 0 for k in trained_agents}\n",
-    "\n",
-    "agent_names = list(trained_agents.keys())\n",
-    "\n",
-    "for i in range(len(agent_names)):\n",
-    "    key = agent_names[i]\n",
-    "    agent = trained_agents[key]\n",
-    "\n",
-    "    print(f\"{key} vs. weak basic opponent\", flush=True)\n",
-    "    for _ in range(NUM_EPS_BASIC_WEAK):\n",
-    "        obs, info = env.reset()\n",
-    "        obs_agent2 = env.obs_agent_two()\n",
-    "        for _ in range(2000):\n",
-    "            a1 = agent.select_action(obs, evaluate=True)\n",
-    "            a2 = basic_weak.act(obs_agent2)\n",
-    "            obs, r, d, _, info = env.step(np.hstack([a1,a2]))\n",
-    "            obs_agent2 = env.obs_agent_two()\n",
-    "            if d: break\n",
-    "        if info[\"winner\"] == 1:\n",
-    "            against_basic_weak[key][0] += 1\n",
-    "        elif info[\"winner\"] == 0:\n",
-    "            against_basic_weak[key][1] += 1\n",
-    "        else:\n",
-    "            against_basic_weak[key][2] += 1\n",
-    "    \n",
-    "    print(f\"{key} vs. strong basic opponent\", flush=True)\n",
-    "    for _ in range(NUM_EPS_BASIC_STRONG):\n",
-    "        obs, info = env.reset()\n",
-    "        obs_agent2 = env.obs_agent_two()\n",
-    "        for _ in range(2000):\n",
-    "            a1 = agent.select_action(obs, evaluate=True)\n",
-    "            a2 = basic_strong.act(obs_agent2)\n",
-    "            obs, r, d, _, info = env.step(np.hstack([a1,a2]))\n",
-    "            obs_agent2 = env.obs_agent_two()\n",
-    "            if d: break\n",
-    "        if info[\"winner\"] == 1:\n",
-    "            against_basic_strong[key][0] += 1\n",
-    "        elif info[\"winner\"] == 0:\n",
-    "            against_basic_strong[key][1] += 1\n",
-    "        else:\n",
-    "            against_basic_strong[key][2] += 1\n",
-    "\n",
-    "    for j in range(i + 1, len(agent_names)):\n",
-    "        key_2 = agent_names[j]\n",
-    "        agent_2 = trained_agents[key]\n",
-    "            \n",
-    "        print(f\"{key} vs. {key_2}\", flush=True)\n",
-    "        for _ in range(NUM_EPS_VS_OTHER_AGENT):\n",
-    "            obs, info = env.reset()\n",
-    "            obs_agent2 = env.obs_agent_two()\n",
-    "            for _ in range(2000):\n",
-    "                a1 = agent.select_action(obs, evaluate=True)\n",
-    "                a2 = agent_2.select_action(obs_agent2, evaluate=True)\n",
-    "                obs, r, d, _, info = env.step(np.hstack([a1,a2]))\n",
-    "                obs_agent2 = env.obs_agent_two()\n",
-    "                if d: break\n",
-    "            if info[\"winner\"] == 1:\n",
-    "                competition_points[key] += 3\n",
-    "            elif info[\"winner\"] == 0:\n",
-    "                competition_points[key] += 1\n",
-    "                competition_points[key_2] += 1\n",
-    "            else:\n",
-    "                competition_points[key_2] += 3\n",
-    "\n",
-    "print(against_basic_weak)\n",
-    "print(against_basic_strong)\n",
-    "print(competition_points)\n",
-    "    "
    ]
   }
  ],
