Improve README and fix episode length issue

--- a/Hockey-Env.ipynb
+++ b/Hockey-Env.ipynb
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
     "\n",
     "# IMPORTANT: CHOOSE PARAMETER FILE\n",
     "\n",
-    "# EVALUATION WINNER (alpha-0.0_15000)\n",
+    "# EVALUATION WINNER (alpha-0.0_15000) -> no entropy term, i.e. not a soft actor-critic in that sense\n",
     "player2.load_checkpoint(\n",
     "    f\"checkpoints/SAC_Hockey_15000-gamma0.99-tau0.005-lr0.0003-alpha0.0-autotuneFalse-pera0.1-perb0.1-seed280.pth\", evaluate=True)\n",
     "\n",
@@ -1138,14 +1138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done after 158 steps. Winner: -1\n"
+      "Done after 80 steps. Winner: -1\n"
      ]
     }
    ],
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
